# moonmoon-rs

./: .gitignore  .prettierignore  CLAUDE.md  CONTEXT.md  Caddyfile  Cargo.toml  LICENSE  PLAN.md  PRODUCT.md  README.md  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: ci.yml
design_handoff_moonmoon_direction_a/: Moonmoon Redesign.html  README.md  mm-a-calendar.jsx  mm-a-history.jsx  mm-a-player.jsx  mm-a-streams.jsx  mm-baseline.jsx  mm-data.jsx  mm-dir1.jsx  mm-dir2.jsx  mm-dir3.jsx  mm-explore.jsx  mm-review.jsx  moonmoon-mock.css
src/: dates.rs  lib.rs  main.rs  middleware.rs  sync_store.rs  vods.rs
src/emotes/: fetch.rs  mod.rs  parse.rs  seventv_search.graphql  store.rs
static/: continue-watching.js  header.js  history.js  list-feedback.js  list-filters.js  player.js  style.css  sync.js  types.d.ts  vod-cards.js
templates/: _footer.html  _sort_control.html  all_streams.html  base.html  browse.html  calendar.html  continue_resume.html  continue_watching_block.html  game_card.html  games.html  games_grid.html  history.html  landing.html  list_filters.html  vod_card.html  vods.html  vods_grid.html  watch.html
tests/: chapter-popover.test.js  chat-autoscroll.test.js  chat-timestamps.test.js  continue-watching.test.js  emote-heuristic.test.js  header-search.test.js  history-sort.test.js  list-feedback.test.js  list-filters.test.js  part-durations.test.js  player-completion.test.js  player-parts.test.js  resume.test.js  router.rs  storage.test.js  sync-session.test.js  sync-storage.test.js  token.test.js  watch-chapters.test.js  watched.test.js
(+69 files in other folders)
