[package]
name = "moonmoon"
version = "0.1.0"
edition = "2024"
description = "Server-rendered VOD browser for the MOONMOON archive (axum + Askama + htmx)"
repository = "https://github.com/ir1141/moonmoon-rs"
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
askama = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
rand = "0.9"
